css changes to fix too wide header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -270,8 +270,8 @@ a.category-badge > span.badge:hover {
 }
 
 #top-nav-header, ul.navbar-nav {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: 8px;
+    margin-right: 7px;
 }
 
 ul.navbar-nav {
